"Fix: 9 Oct Added f(x): automate crud based on migrate+seed table column for Event Pending: automate for news + UI sidebar button cleanup automate, API JWT"
