# public/swagger.json
@@ -261,6 +261,370 @@
                 ]
             }
         },
+        "/api/event": {
+            "get": {
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Get list of event",
+                "description": "Returns a paginated list of event.",
+                "operationId": "getEvent",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Event"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Create a new Event",
+                "operationId": "createEvent",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "description",
+                                    "detail",
+                                    "location",
+                                    "date_start",
+                                    "date_end"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "detail": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "location": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "date_start": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "date_end": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Event created successfully"
+                    }
+                }
+            }
+        },
+        "/api/event/{event}": {
+            "get": {
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Get a specific event",
+                "operationId": "getEventById",
+                "parameters": [
+                    {
+                        "name": "event",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Update a Event by ID (POST + _method=PUT)",
+                "operationId": "updateEventviaPost",
+                "parameters": [
+                    {
+                        "name": "event",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "description",
+                                    "detail",
+                                    "location",
+                                    "date_start",
+                                    "date_end"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "detail": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "location": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "date_start": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "date_end": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "_method": {
+                                        "type": "string",
+                                        "example": "PUT"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Event updated successfully"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Delete a event by ID",
+                "operationId": "deleteEvent",
+                "parameters": [
+                    {
+                        "name": "event",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Event deleted successfully"
+                    }
+                }
+            }
+        },
+        "/api/news": {
+            "get": {
+                "tags": [
+                    "News"
+                ],
+                "summary": "Get list of news",
+                "description": "Returns a paginated list of news.",
+                "operationId": "getNews",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/News"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "News"
+                ],
+                "summary": "Create a new News",
+                "operationId": "createNews",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "author",
+                                    "content"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "author": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "content": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "News created successfully"
+                    }
+                }
+            }
+        },
+        "/api/news/{news}": {
+            "get": {
+                "tags": [
+                    "News"
+                ],
+                "summary": "Get a specific news",
+                "operationId": "getNewsById",
+                "parameters": [
+                    {
+                        "name": "news",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "News"
+                ],
+                "summary": "Update a News by ID (POST + _method=PUT)",
+                "operationId": "updateNewsviaPost",
+                "parameters": [
+                    {
+                        "name": "news",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "author",
+                                    "content"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "author": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "content": {
+                                        "type": "string",
+                                        "example": "Example"
+                                    },
+                                    "_method": {
+                                        "type": "string",
+                                        "example": "PUT"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "News updated successfully"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "News"
+                ],
+                "summary": "Delete a news by ID",
+                "operationId": "deleteNews",
+                "parameters": [
+                    {
+                        "name": "news",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "News deleted successfully"
+                    }
+                }
+            }
+        },
         "/api/products": {
             "get": {
                 "tags": [
@@ -483,6 +847,67 @@
     },
     "components": {
         "schemas": {
+            "Event": {
+                "title": "Event",
+                "required": [
+                    "name",
+                    "description",
+                    "detail",
+                    "location",
+                    "date_start",
+                    "date_end"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "Example"
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "Example"
+                    },
+                    "detail": {
+                        "type": "string",
+                        "example": "Example"
+                    },
+                    "location": {
+                        "type": "string",
+                        "example": "Example"
+                    },
+                    "date_start": {
+                        "type": "string",
+                        "example": "Example"
+                    },
+                    "date_end": {
+                        "type": "string",
+                        "example": "Example"
+                    }
+                },
+                "type": "object"
+            },
+            "News": {
+                "title": "News",
+                "required": [
+                    "title",
+                    "author",
+                    "content"
+                ],
+                "properties": {
+                    "title": {
+                        "type": "string",
+                        "example": "Example"
+                    },
+                    "author": {
+                        "type": "string",
+                        "example": "Example"
+                    },
+                    "content": {
+                        "type": "string",
+                        "example": "Example"
+                    }
+                },
+                "type": "object"
+            },
             "Product": {
                 "title": "Product",
                 "required": [
@@ -584,6 +1009,14 @@
         {
             "name": "Auth",
             "description": "Auth"
+        },
+        {
+            "name": "Event",
+            "description": "Event"
+        },
+        {
+            "name": "News",
+            "description": "News"
         },
         {
             "name": "Products",
